# test-autotag

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: main.yml
src/: LICENSE.txt  README.md  pyproject.toml
src/dummy/: __about__.py
src/tests/: __init__.py
