#### hatch ####################################################################
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/dummy"]

[tool.hatch.version]
path = "src/dummy/__init__.py"

#### project ##################################################################
[project]
name = "dummy"
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.9"
authors = [{ name = "Derek Wan", email = "d.wan@icloud.com" }]
dependencies = ["beartype >= 0.11.0", "typing-extensions >= 4.4.0"]

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "exceptiongroup", # pytest
  "hatch",
  "pip-tools",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
]
